tests/paczka1/small_fuzzy/41699321.err
Error in line 1: Vrbde5un S771 6,9
Error in line 11: xLBcAw S771 37,8
Error in line 9: 3D4 S771 71,2
Error in line 12: xLBcAw A375 60,0
